--- a/112208077_HW5.css
+++ b/112208077_HW5.css
@@ -136,21 +136,25 @@ section h2 {
 
 .music-gallery {
   display: flex;
-  gap: 20px;
+  gap: 30px;
   justify-content: center;
   text-align: center;
 }
 
 .music-gallery a {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-decoration: none; 
-  text-align: center;
+  width: 50px;
 }
 
 .music-gallery a span {
-  display: block; 
   margin-top: 10px; 
   color: #000; 
+  width: 50px;
+  font-size: 0.8em;
+  text-align: center;
 }
 
 .music-gallery img {
