--- a/112208077_HW5.css
+++ b/112208077_HW5.css
@@ -147,13 +147,14 @@ section h2 {
   align-items: center;
   text-decoration: none; 
   width: 50px;
+  height: auto;
 }
 
 .music-gallery a span {
   margin-top: 10px; 
   color: #000; 
-  width: 50px;
   font-size: 0.8em;
+  width: 100%;
   text-align: center;
 }
 
@@ -166,6 +167,6 @@ section h2 {
 .note {
   font-size: 12px;
   color: #666;
-  text-align: center;
+  text-align: left;
   margin-top: 10px;
 }
