--- a/112208077_HW5.css
+++ b/112208077_HW5.css
@@ -42,7 +42,7 @@ body {
 }
 
 .text-content {
-  padding: 20px;
+  padding: 35px;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -50,15 +50,7 @@ body {
 }
 
 .text-content h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  text-transform: uppercase;
   text-align: center;
-}
-
-.text-content h3 {
-  font-size: 18px;
-  margin-bottom: 10px;
 }
 
 .text-content p {
@@ -73,7 +65,7 @@ body {
 }
 
 .nccu-icon {
-  width: 270px;
+  width: 250px;
   align-self: center;
 }
 
@@ -81,7 +73,7 @@ body {
 .right-panel {
   width: 540px;
   height: 1150px;
-  padding: 20px;
+  padding: 35px;
   display: grid;
 }
 
@@ -90,43 +82,50 @@ section {
 }
 
 section h2 {
-  font-size: 20px;
   margin-bottom: 10px;
   border-bottom: 2px solid #ddd;
   padding-bottom: 5px;
 }
 
 .timeline {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  display: grid;
+  grid-gap: 30px;
+  margin-top: 20px;
 }
 
 .timeline-item {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .year {
   font-weight: bold;
-  width: 65px;
+  width: 50px;
+  margin-right: 15px;
 }
 
 .description {
-  margin-left: 10px;
+  flex: 1;
 }
 
-.homework-list ul {
-  list-style-type: none;
+.homework-list {
+  display: grid;
+  grid-gap: 30px;
+  margin-top: 20px;
 }
 
-.homework-list li {
-  margin-bottom: 10px;
-  font-size: 14px;
+.homework-list p {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.homework-list span {
+  font-weight: bold;
 }
 
 .homework-list a {
-  color: #0077b5;
+  color: #81888c;
   text-decoration: none;
 }
 
@@ -136,7 +135,8 @@ section h2 {
 
 .music-gallery {
   display: flex;
-  gap: 30px;
+  margin-top: 20px;
+  gap: 45px;
   justify-content: center;
   text-align: center;
 }
